--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     .active { display: block; }
     .quiz-btn { background: #0074D9; transition: 0.3s; width: 100%; padding: 1rem; border-radius: 0.75rem; font-weight: bold; margin-bottom: 0.5rem; }
     .quiz-btn:hover { background: #39CCCC; }
+    /* Estilo para o botão ativo no menu */
+    .nav-active { color: #E8B923 !important; opacity: 1 !important; }
   </style>
 </head>
 <body class="min-h-screen pb-24">
@@ -25,11 +27,11 @@
     </div>
   </div>
 
-  <div class="fixed bottom-0 left-0 right-0 bg-[#000814] border-t border-[#15803D] flex justify-around py-4 z-50">
-    <button onclick="showSection('home')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-[#E8B923]">INÍCIO</span></button>
+  <div id="navbar" class="fixed bottom-0 left-0 right-0 bg-[#000814] border-t border-[#15803D] flex justify-around py-4 z-50">
+    <button onclick="showSection('home')" class="flex flex-col items-center"><span class="text-[9px] font-bold nav-active">INÍCIO</span></button>
     <button onclick="showSection('projeto')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">PROJETO</span></button>
-    <button onclick="showSection('palavra')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">BÍBLIA</span></button>
-    <button onclick="showSection('quiz')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-[#E8B923]">DESAFIO</span></button>
+    <button onclick="showSection('palavra')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70 uppercase text-center leading-tight">DEVOCIONAL<br>DIÁRIO</span></button>
+    <button onclick="showSection('quiz')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">DESAFIO</span></button>
     <button onclick="showSection('clube')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">CLUBE</span></button>
     <button onclick="showSection('doar')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">DOAR</span></button>
   </div>
@@ -38,15 +40,31 @@
     
     <div id="home" class="section active text-center">
         <div class="bg-white/5 p-8 rounded-3xl border border-white/10 shadow-xl">
-            <h2 class="text-[#E8B923] text-xl font-black uppercase mb-6 italic">Apresentação do Aplicativo</h2>
+            <h2 class="text-[#E8B923] text-xl font-black uppercase mb-6 italic">Apresentação</h2>
             <div class="text-sm text-gray-200 leading-relaxed text-justify space-y-4 mb-8">
                 <p>Missão Peru é mais do que um aplicativo — é um chamado.</p>
-                <p>Uma plataforma criada para conectar corações à obra missionária, fortalecer vidas na Palavra e mobilizar pessoas para viverem o propósito eterno de Deus entre as nações.</p>
-                <p>Aqui você acompanha projetos, intercede, participa, aprende e se envolve com aquilo que o Senhor está fazendo em Tacna e além. Cada acesso é uma oportunidade de transformação. Cada clique é um passo de fé.</p>
-                <p class="font-bold italic text-[#E8B923]">Este não é apenas um espaço digital. É um altar virtual de compromisso, serviço e esperança.</p>
-                <p class="text-center font-black uppercase text-[#E8B923]">✝️ Responda ao chamado e viva a missão</p>
+                <p>Aqui você acompanha projetos, intercede e se envolve com aquilo que o Senhor está fazendo em Tacna.</p>
+                <p class="font-bold italic text-[#E8B923]">Este não é apenas um espaço digital. É um altar virtual de compromisso.</p>
             </div>
             <button onclick="showSection('projeto')" class="w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs">CONHEÇA NOSSOS PROJETOS</button>
+        </div>
+    </div>
+
+    <div id="palavra" class="section text-center">
+        <h2 class="text-[#E8B923] text-xl font-black uppercase italic mb-6">Devocional Diário</h2>
+        <div class="bg-white/5 p-6 rounded-3xl border border-white/10 text-justify">
+            <p class="text-gray-200 italic">"Lâmpada para os meus pés é tua palavra, e luz para o meu caminho." - Salmos 119:105</p>
+            <div class="mt-6 p-4 bg-[#15803D]/20 rounded-xl border border-[#15803D]">
+                <h3 class="font-bold text-[#E8B923] mb-2 text-sm uppercase">Palavra do Dia</h3>
+                <p class="text-sm">O conteúdo do devocional será atualizado diariamente aqui.</p>
+            </div>
+        </div>
+    </div>
+
+    <div id="projeto" class="section text-center">
+        <h2 class="text-[#E8B923] text-xl font-black uppercase italic mb-6">Nossos Projetos</h2>
+        <div class="bg-white/5 p-6 rounded-3xl border border-white/10">
+            <p class="text-sm">Conheça o trabalho missionário em Tacna, Peru.</p>
         </div>
     </div>
 
@@ -58,8 +76,8 @@
             <span class="font-bold text-[#E8B923]">Cursos & E-books</span>
             <span>🔒</span>
         </div>
-        <a href="LINK_FUTURO_DO_CLUBE" target="_blank" class="block w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs shadow-lg">
-            📝 Cadastro para os beneficios do clube
+        <a href="#" class="block w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs shadow-lg">
+            📝 Cadastro Clube
         </a>
     </div>
 
@@ -68,23 +86,13 @@
             <h2 id="medalha" class="text-[#E8B923] font-black text-xl mb-4 uppercase tracking-tighter italic">Iniciante</h2>
             <div id="pergunta" class="text-lg font-bold mb-6 text-justify italic">Carregando perguntas sagradas...</div>
             <div id="alternativas" class="space-y-3"></div>
-            <div class="mt-8 pt-6 border-t border-white/10">
-                <button onclick="usarVidaExtra()" class="w-full bg-red-900/40 border border-red-500 py-3 rounded-xl text-[10px] font-bold uppercase">❤️ Comprar Vida (150 moedas)</button>
-            </div>
         </div>
     </div>
 
     <div id="doar" class="section text-center">
         <h2 class="text-[#E8B923] text-2xl font-black italic mb-6 uppercase">Semente Missionária</h2>
-        <div class="bg-gradient-to-br from-[#15803D] to-[#0A2540] p-6 rounded-3xl border-2 border-[#E8B923] shadow-2xl mb-6">
-            <h3 class="text-white font-bold mb-2">Ser Apoiador Mensal</h3>
-            <p class="text-[10px] text-gray-200 mb-4 italic">Compromisso de fidelidade por 12 meses.</p>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScvuR68w5vxsJDBw-Y1ZuXDv78AO7UO-rTYtd3rHEoguYHpjg/viewform?usp=sharing" target="_blank" class="block w-full bg-[#E8B923] text-[#000814] py-4 rounded-xl font-black uppercase text-xs shadow-lg">
-                📝 SER APOIADOR MENSAL
-            </a>
-        </div>
         <div class="bg-white/5 border border-white/10 p-6 rounded-3xl shadow-xl">
-            <h3 class="text-gray-300 text-sm font-bold mb-4 italic">Doar agora, única vez?</h3>
+            <h3 class="text-gray-300 text-sm font-bold mb-4 italic">Chave PIX (CPF)</h3>
             <p class="text-lg font-mono font-bold text-white mb-4 tracking-widest">05475258856</p>
             <button onclick="navigator.clipboard.writeText('05475258856'); alert('Chave PIX copiada!')" class="w-full border border-[#15803D] text-[#15803D] py-3 rounded-xl text-[10px] font-bold uppercase">COPIAR CHAVE PIX</button>
         </div>
@@ -93,12 +101,27 @@
   </main>
 
   <script>
-    let perguntas = []; let index = 0; let pontuacao = 0; let moedas = 0; let streak = 0; let vidas = 3;
+    let perguntas = []; let index = 0; let pontuacao = 0; let moedas = 0; let vidas = 3;
 
     function showSection(id) {
+      // Esconder todas as seções
       document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+      // Mostrar a seção desejada
       const target = document.getElementById(id);
       if(target) target.classList.add('active');
+
+      // Atualizar cores dos botões do menu
+      const buttons = document.querySelectorAll('#navbar button span');
+      buttons.forEach(btn => {
+          btn.classList.remove('nav-active');
+          btn.classList.add('text-white/70');
+      });
+      
+      // Encontrar o botão clicado e marcar como ativo
+      const clickedBtn = event.currentTarget.querySelector('span');
+      clickedBtn.classList.add('nav-active');
+      clickedBtn.classList.remove('text-white/70');
+
       window.scrollTo(0,0);
     }
 
@@ -109,13 +132,17 @@
         perguntas = data.sort(() => Math.random() - 0.5);
         if (perguntas.length > 0) mostrarPergunta();
       } catch(e) {
-        document.getElementById("pergunta").innerText = "Erro ao carregar o Desafio. Verifique o arquivo questions.json.";
+        document.getElementById("pergunta").innerText = "Configure o arquivo questions.json para jogar o quiz.";
       }
     }
 
     function mostrarPergunta() {
       const q = perguntas[index];
-      if(!q) return;
+      if(!q) {
+          document.getElementById("pergunta").innerText = "Você completou todos os desafios!";
+          document.getElementById("alternativas").innerHTML = "";
+          return;
+      }
       document.getElementById("pergunta").innerText = q.question;
       const container = document.getElementById("alternativas");
       container.innerHTML = "";
@@ -131,11 +158,11 @@
 
     function verificarResposta(resposta, correta) {
       if (resposta === correta) {
-        pontuacao++; moedas += 10; streak++;
+        pontuacao++; moedas += 10;
         index++; mostrarPergunta();
       } else {
-        vidas--; streak = 0;
-        if (vidas <= 0) { alert("Fim de jogo!"); resetar(); }
+        vidas--;
+        if (vidas <= 0) { alert("Fim de jogo! Tente novamente."); resetar(); }
       }
       atualizarStatus();
     }
@@ -144,17 +171,6 @@
       document.getElementById("moedas").innerText = moedas;
       document.getElementById("vidas").innerText = vidas;
       document.getElementById("pontos").innerText = pontuacao;
-      atualizarMedalha();
-    }
-
-    function atualizarMedalha() {
-      let m = "Iniciante";
-      if (pontuacao >= 100) m = "🔥 Apóstolo";
-      else if (pontuacao >= 75) m = "👑 Teólogo";
-      else if (pontuacao >= 50) m = "🥇 Missionário";
-      else if (pontuacao >= 25) m = "🥈 Obreiro";
-      else if (pontuacao >= 10) m = "🥉 Discípulo";
-      document.getElementById("medalha").innerText = m;
     }
 
     function resetar() { index = 0; pontuacao = 0; moedas = 0; vidas = 3; mostrarPergunta(); }
