--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+<head> <link rel="apple-touch-icon" href="logo-missao-peru.png">
+<link rel="icon" type="image/png" href="logo-missao-peru.png">   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Missão Peru</title>
@@ -242,3 +243,4 @@
   </script>
 </body>
 </html>
+
