--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
     <div id="quiz" class="section text-center">
         <div class="w-full bg-white/10 h-2 rounded-full mb-6 overflow-hidden border border-white/5">
             <div id="progresso-barra" class="bg-[#E8B923] h-full transition-all duration-500" style="width: 0%"></div>
+          <div class="mb-6 p-4 bg-white/5 rounded-2xl border border-white/10 text-[11px] text-gray-300 text-left space-y-2">
+        <p class="font-bold text-[#E8B923] uppercase mb-1">📜 Regras do Desafio:</p>
+        <p>• <b>Acertos:</b> Cada resposta correta rende <span class="text-[#E8B923]">10 moedas</span> e 1 ponto.</p>
+        <p>• <b>Vidas:</b> Você começa com <span class="text-red-500">3 vidas</span>. Se errar, perde uma.</p>
+        <p>• <b>Pular:</b> Custa <span class="text-[#E8B923]">50 moedas</span> (use quando não souber!).</p>
+        <p>• <b>Recomeçar:</b> Se as vidas acabarem, moedas e pontos resetam.</p>
+        <p class="italic text-[10px] pt-1 text-white/40 text-center">*Estude os devocionais para pontuar mais!</p>
+    </div>
         </div>
         <div class="bg-white/5 p-6 rounded-3xl border border-[#E8B923]/30 shadow-2xl text-center">
             <h2 id="medalha" class="text-[#E8B923] font-black text-xl mb-4 uppercase italic tracking-tighter">Iniciante</h2>
@@ -254,3 +262,4 @@
   </script>
 </body>
 </html>
+
