--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             </div>
             <div class="bg-[#15803D] p-6 rounded-2xl shadow-lg border-b-4 border-green-900"><h4 class="font-black text-xs uppercase mb-2">🙏 Chamado à Ação</h4><p id="dev-chamado" class="text-sm"></p></div>
         </div>
+      <div class="mt-6">
+    <button onclick="compartilharDevocional()" class="w-full bg-[#25D366] text-white py-3 rounded-xl font-bold text-[10px] uppercase flex justify-center items-center gap-2 shadow-lg">
+        <span class="text-lg">📲</span> COMPARTILHAR NO WHATSAPP
+    </button>
+</div>
         <div class="h-20"></div>
     </div>
 
@@ -262,4 +267,5 @@
   </script>
 </body>
 </html>
+
 
