Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#15803D">
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js')
+        .then(() => console.log("Missão Peru: App pronto para instalar!"))
+        .catch((err) => console.log("Erro no registro:", err));
+    }
+  </script>
     body { font-family: system-ui, sans-serif; background: #000814; color: white; scroll-behavior: smooth; }
     .section { display: none; }
     .active { display: block; }
@@ -157,10 +167,50 @@
             <button onclick="showSection('home')" class="w-full bg-[#15803D] text-white py-4 rounded-xl font-black uppercase text-xs shadow-lg">VOLTAR AO INÍCIO</button>
         </div>
     </div>
+<div id="projeto" class="section text-center">
+    <div class="bg-gradient-to-b from-[#15803D]/30 to-transparent p-6 rounded-3xl border border-[#15803D]/50 mb-8">
+        <h2 class="text-[#E8B923] text-2xl font-black uppercase italic mb-1">Como Instalar</h2>
+        <p class="text-[10px] text-white/50 tracking-[0.2em] uppercase font-bold">App Missão Peru</p>
+    </div>
 
-    <div id="projeto" class="section text-center"><h2 class="text-[#E8B923] text-xl font-black uppercase italic mb-6">Projetos</h2><div class="bg-white/5 p-8 rounded-3xl border border-white/10 text-sm italic">Em breve novidades de Tacna...</div></div>
-    <div id="clube" class="section text-center"><h2 class="text-[#E8B923] text-xl font-black uppercase italic mb-6">Clube</h2><div class="bg-white/5 p-8 rounded-3xl border border-white/10 text-sm italic">Conteúdo exclusivo em breve...</div></div>
+    <div class="space-y-4 text-left">
+        <div class="bg-white/5 p-5 rounded-2xl border border-white/10">
+            <h3 class="text-[#E8B923] font-bold text-sm flex items-center gap-2 mb-3">
+                <span class="text-xl">🤖</span> NO ANDROID (CHROME)
+            </h3>
+            <p class="text-xs text-gray-300 leading-relaxed">
+                1. Toque nos <b>três pontinhos (⋮)</b> no canto superior direito.<br>
+                2. Escolha <b>"Instalar aplicativo"</b> ou "Adicionar à tela inicial".<br>
+                3. Confirme em "Instalar".
+            </p>
+        </div>
 
+        <div class="bg-white/5 p-5 rounded-2xl border border-white/10">
+            <h3 class="text-[#E8B923] font-bold text-sm flex items-center gap-2 mb-3">
+                <span class="text-xl">🍎</span> NO IPHONE (SAFARI)
+            </h3>
+            <p class="text-xs text-gray-300 leading-relaxed">
+                1. Toque no ícone de <b>Compartilhar</b> (quadrado com uma seta para cima).<br>
+                2. Role a lista para baixo e toque em <b>"Adicionar à Tela de Início"</b>.<br>
+                3. Toque em "Adicionar" no canto superior.
+            </p>
+        </div>
+
+        <div class="bg-[#E8B923]/10 p-4 rounded-2xl border border-[#E8B923]/20 mt-6">
+            <p class="text-[10px] text-[#E8B923] font-bold text-center italic uppercase">
+                "Uma ferramenta para conectar corações à obra missionária em Tacna."
+            </p>
+        </div>
+    </div>
+    
+    <div class="mt-8">
+        <button onclick="showSection('home')" class="w-full bg-[#15803D] text-white py-4 rounded-xl font-black uppercase text-xs shadow-lg">
+            VOLTAR AO INÍCIO
+        </button>
+    </div>
+    
+    <div class="h-20"></div>
+</div>
   </main>
 
   <script>
@@ -290,6 +340,7 @@
   </script>
 </body>
 </html>
+
 
 
 
